# objectindex

./: MANIFEST.in  README.md  minio-setup.sh  pyproject.toml  requirements.txt  sample.cfg  schema.sql  setup.py  test_upload.py  userbucketpolicy.json
obj_idx/: api.py  app.py  cli.py  client.py  clilib.py  db.py  db_create.py  gui.py  minio_admin.py  s3lib.py
obj_idx/templates/: base.html  file.html  home.html  list.html  object.html
scripts/: jf.py  lri.py  obj_idx  si.py  sw.py  yt.py
