[project]
name = "objectindex"
version = "0.1.4"
description = "Object Index allows you to index your objexts in S3"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "ctengel"}]
keywords = ["object", "s3"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha", 
  "Environment :: Web Environment",
  "Natural Language :: English"
]
dependencies = [
  'flask-sqlalchemy >= 2.5, < 3',
  'flask >= 2.1',
  'flask-restx >= 1.0',
  'requests >= 2.27',
  'minio >= 7.1.16',
  'boto3 >= 1.22',
  'psycopg2 >= 2.9',
  'sqlalchemy >= 1.4, < 2'
]

[project.urls]
repository = "https://github.com/ctengel/objectindex"

[project.scripts]
obj-idx-client = "obj_idx.cli:cli"
obj-idx-admin = "obj_idx.minio_admin:cli"

[tool.setuptools.packages.find]
include = ["obj_idx"]
